Enhance layout and styles for improved navigation and readability; add scroll behavior for fixed header

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -17,6 +17,9 @@
 	--font-family-default: "Poppins", sans-serif;
 	--font-family-logo: "Press Start 2P", system-ui;
 }
+body {
+	overflow-y: scroll;
+}
 /*Header*/
 .logo {
 	font-size: 1.3rem;
@@ -25,12 +28,19 @@
 	font-family: var(--font-family-logo);
 	font-style: normal;
 }
+header {
+	width: 100%;
+	position: fixed;
+	display: block;
+	top: 0;
+	background-color: var(--primary-color);
+	border-bottom: 1px solid var(--extra-light);
+}
 .nav_bar {
 	display: flex;
 	justify-content: space-between;
-	max-width: var(--max-width);
-	margin: auto;
-	padding: 1.2rem 1rem;
+	background-color: var(--primary-color);
+	margin: 1rem 1rem;
 	align-items: center;
 	gap: 2rem;
 }
@@ -42,7 +52,6 @@
 	font-size: 1rem;
 }
 .link a {
-	padding: 1.3rem 5px;
 	font-weight: 500;
 	color: var(--white);
 	transition: 0.3s;
@@ -51,44 +60,48 @@
 	color: var(--secondary-color);
 	border-bottom: 2px solid var(--secondary-color);
 }
-.link.current a{
+.link.current a {
 	color: var(--secondary-color);
 	border-bottom: 2px solid var(--secondary-color);
 }
 .link span {
-	padding: 1rem 0;
 	color: var(--white);
 	cursor: pointer;
 }
 #sesionbutton {
-	font-size: 14px;
-	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-		Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-		sans-serif;
+	font-size: 16px;
+	font-family: var(--font-family-default);
+	font-weight: bolder;
 }
 a {
 	text-decoration: none;
 	color: var(--white);
+}
+li {
+	list-style: none;
 }
 * {
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
 }
-nav {
-	display: block;
-	unicode-bidi: isolate;
-	background-color: var(--primary-color);
-	border-bottom: 1px solid var(--extra-light);
-	position: relative;
-	z-index: 1000;
-}
 body {
 	font-family: var(--font-family-default);
 	color: var(--white);
 	background-color: var(--primary-color);
 }
+.first-section {
+	padding: 1rem 0rem 0rem 0rem;
+	margin-top: 3rem;
+}
+
 /*Footer*/
+footer{
+
+	bottom: 0;
+	background-color: var(--primary-color);
+	width: 100%;
+}
 footer .section_container {
 	margin-bottom: 0;
 	padding-bottom: 0;
@@ -207,30 +220,29 @@ footer .section_container {
 #emailField {
 	display: none;
 }
-/*Productos*/
-.row {
-    display: flex;
-	
+#login {
+	padding: 7rem 0rem 0rem 0rem;
 }
-.col-md-5, .col-md-7 {
-    width: 50%;
-    box-sizing: border-box;
+/*productos*/
+.row {
+	display: flex;
+}
+.col-md-5,
+.col-md-7 {
+	width: 50%;
+	box-sizing: border-box;
 	padding: 2rem;
 	display: flex;
-	
 }
-li {
-	list-style: none;
-}
-.form-group li{
+.form-group li {
 	color: var(--primary-color);
 	font-weight: bold;
 	font-family: var(--font-family-default);
 }
-.panel_header.product-form{
-	border-radius: 0rem;
+.panel_header.product-form {
+	border-radius: 1.2rem;
 }
-.panel_body.product-form{
+.panel_body.product-form {
 	border-radius: 0.25rem;
 	border-top-left-radius: 1.25rem;
 	border-bottom-left-radius: 1.25rem;
@@ -238,8 +250,24 @@ li {
 .input_box.product-form {
 	margin: 5px 0;
 }
-/*dashboard*/
+.panel_header.product-table {
+	border-radius: 1.2rem;
+}
+.panel_body.product-table {
+	border-radius: 0.25rem;
+	border-top-right-radius: 1.25rem;
+	border-bottom-right-radius: 1.25rem;
+}
+.product_table {
+	width: 100%;
+}
+.product_table td{
+	color: var(--primary-color);
+}
+td {
+	border-bottom: 2px solid var(--primary-color);
+}
 
+/*dashboard*/ 
 
 /*index*/
-
